# medusa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
medusa/core/: exceptions.py  window.py
medusa/utilities/: invoke.py  log.py  resource.py  timing.py
medusa/vulkan/: buffer.py  command_buffer.py  constants.py  context.py  descriptors.py  extensions.py  frame_buffer.py  memory.py  pipeline.py  queue.py  render_pass.py  renderer.py  surface.py  swap_chain.py  synchronisation.py  vulkan.py
scripts/: compile_shaders.py
