[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "medusa"
version = "0.0.1"
description = "Python Vulkan Engine"

dependencies = [

    # Core
    "pyyaml",

    # Development
    "coloredlogs",

    # Graphics
    "pysdl2",
    "pysdl2-dll",

    "vulkan",

]
