[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "medusa"
version = "0.0.1"
description = "Python Vulkan Engine"

dependencies = [

    # Core
    "pyyaml",

    # Development
    "coloredlogs",
    "pre-commit",
    "flake8-pyproject",

    # Math
    "numpy",
    "pyglm",

    # Graphics
    "pysdl2",
    "pysdl2-dll",

    "vulkan",

]

[tool.black]
line-length=120
exclude=[
    "venv"
]

[tool.flake8]
max-line-length=120
exclude=[
    "venv"
]
